; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_mv_ap806_gicp.c_mv_ap806_gicp_post_ithread.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_mv_ap806_gicp.c_mv_ap806_gicp_post_ithread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i32 }
%struct.mv_ap806_gicp_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.intr_irqsrc*)* @mv_ap806_gicp_post_ithread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mv_ap806_gicp_post_ithread(i32 %0, %struct.intr_irqsrc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intr_irqsrc*, align 8
  %5 = alloca %struct.mv_ap806_gicp_softc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.intr_irqsrc* %1, %struct.intr_irqsrc** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.mv_ap806_gicp_softc* @device_get_softc(i32 %6)
  store %struct.mv_ap806_gicp_softc* %7, %struct.mv_ap806_gicp_softc** %5, align 8
  %8 = load %struct.mv_ap806_gicp_softc*, %struct.mv_ap806_gicp_softc** %5, align 8
  %9 = getelementptr inbounds %struct.mv_ap806_gicp_softc, %struct.mv_ap806_gicp_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %4, align 8
  %12 = call i32 @PIC_POST_ITHREAD(i32 %10, %struct.intr_irqsrc* %11)
  ret void
}

declare dso_local %struct.mv_ap806_gicp_softc* @device_get_softc(i32) #1

declare dso_local i32 @PIC_POST_ITHREAD(i32, %struct.intr_irqsrc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
